# TDSmoke

./: .gitignore  CMakeLists.txt  README.txt  genmovie.sh
TDSmoke/: CMakeLists.txt  Colormap.cpp  Colormap.h  GaussFilter2d.cpp  GaussFilter2d.h  MathUtilities.cpp  RenderingUtilities.cpp  RenderingUtilities.h  SimulationEnsemble.h  StringUtilities.h  TDSmokeEnsemble.cpp  TDSmokeEnsemble.h  TDSmokeSim.cpp  TDSmokeSim.h  TDSmokeSimXMLParser.cpp  TDSmokeSimXMLParser.h  TimingUtilities.cpp  TimingUtilities.h  TwoDimensionalDisplayController.cpp  TwoDimensionalDisplayController.h  YImage.cpp  YImage.h  main.cpp
assets/: .test01.xml.swp  cu.xml  greek.xml  test01.xml  test02.xml  test03.xml  test04.xml  test05.xml  xo.xml
assets/demo/: gathering-disabled.xml  gathering-enabled.xml  larger-sigma.xml  larger-vd.xml  smaller-sigma.xml  smaller-vd.xml  smaller-vf.xml  standard.xml
include/eigen/Eigen/src/StlSupport/: details.h
utilities/: a.out  genXML_cu.cpp  genXML_greek.cpp  genXML_test01.cpp  genXML_test03.cpp  genXML_test05.cpp  genXML_xo.cpp
utilities/proc_img/: cu_crown_100.txt  cu_crown_200.txt  cu_text_100.txt  cu_text_200.txt  gray2bit.m  omega_100.txt  psy_100.txt
